k8s/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
spec:
  selector:
    app: checkout-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
